--- a/example/src/public/index.html
+++ b/example/src/public/index.html
@@ -12,9 +12,7 @@
 
   </head>
   <body>
-    <div class="container">
-      <ui-view></ui-view>
-    </div>
+    <app></app>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
