--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
 
-    <base href="/">
+    <base href="angular-thailand.js/">
   <link href="/css/app.css" rel="stylesheet"></head>
   <body>
     <app></app>
