--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
 
     <base href="https://kiwsan.github.io/angular-thailand.js/">
-  <link href="/css/app.css" rel="stylesheet"></head>
+  <link href="https://kiwsan.github.io/angular-thailand.js/css/app.css" rel="stylesheet"></head>
   <body>
     <app></app>
 
@@ -19,5 +19,5 @@
 
     <script type="text/javascript" src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
 
-  <script type="text/javascript" src="/app.69a9abddaae1ad300cfc.js"></script></body>
+  <script type="text/javascript" src="https://kiwsan.github.io/angular-thailand.js/app.69a9abddaae1ad300cfc.js"></script></body>
 </html>
